"add email link to footer"

--- a/ourcheese.html
+++ b/ourcheese.html
@@ -18,13 +18,13 @@
 
   <header>
 
-    <!--------------------------------------------------------------------------------------------nav-bar------->
+    <!--////////////////////////////////////////////////////////  Navigational Bar  ////////////////-->
 
     <nav class="navbar bg-dark fixed-top navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Cheezebo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar">
+          aria-controls="offcanvasNavbar" aria-label="Navigation Button">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -53,7 +53,7 @@
   </header>
 
   <section>
-<!--------------------------------------------------------------------------------------------logo-and-our-cheese-banner------->
+<!--////////////////////////////////////////////////////////  Logo and Cheese banner ////////////////-->
     <div id="ourcheese-bg-img">
 
     </div>
@@ -67,7 +67,7 @@
     </div>
 
 
-<!--------------------------------------------------------------------------------------------cheese-info-section------>
+<!--////////////////////////////////////////////////////////  Cheese Info Section  ////////////////-->
     <div class="cheese-intro-text">
       <h1>Artisan Cheeses</h1>
       <p>We here at Cheezebo are beyond passionate about great quality, artisan cheese. See below just a small sample of
@@ -80,10 +80,10 @@
     </div>
 
     <br>
-<!--------------------------------------------------------------------------------------------cheese-thumbnails------->
+<!--////////////////////////////////////////////////////////  Cheese Thumbnails ////////////////-->
     <div class="cheese-thumbnail">
       <H3>Brie</H3>
-      <p><img src="assets/images/charlie-solorzano-c0O9Y-jrAFk-unsplash (1).webp"
+      <p><img src="assets/images/brie-thumbnail.webp"
           alt="picture of brie on a chopping board">
 
           Our brie comes from the Seine-et-Marne region of France, famous for its Brie. 
@@ -125,7 +125,7 @@
 
 
   </section>
-<!----------------------------------------------------------------------------------------------footer-and-socials------->
+<!--////////////////////////////////////////////////////////  Footer ////////////////-->
   <footer>
     <div class="footer-bottom">
       <div class="logo-footer-text">
@@ -134,10 +134,9 @@
       </div>
 
       <ul class="social-networks">
-
-        <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-        <li><a href="https://www.pinterest.com" target="_blank"><i class="fa-brands fa-pinterest"></i></a></li>
+        <li><a href="https://www.facebook.com" aria-label="Follow me on Facebook" target="_blank"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.instagram.com" aria-label="Follow me on Instagram" target="_blank"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.pinterest.com" aria-label="Follow me on Pinterest" target="_blank"><i class="fa-brands fa-pinterest" aria-hidden="true"></i></a></li>
 
       </ul>
     </div>
