--- a/contactus.html
+++ b/contactus.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://kit.fontawesome.com/4d9ba9b512.js" crossorigin="anonymous"></script>
-  <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -17,14 +16,14 @@
 <body>
 
   <header>
-<!--------------------------------------------------------------------------------------------nav-bar------->
+<!--////////////////////////////////////////////////////////  Navigational Bar  ////////////////-->
 
 
     <nav class="navbar bg-dark fixed-top navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Cheezebo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar">
+          aria-controls="offcanvasNavbar" aria-label="Navigation Button">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -55,7 +54,7 @@
 
 
   <section>
-    <!---------------------------------------------------------------------------------form-enquiry-->
+    <!--////////////////////////////////////////////////////////  form enquiry ////////////////-->
 
     <div class="contact-image"></div>
 
@@ -81,7 +80,7 @@
         <input type="text" id="lname" class="form-input" name="last_name" required>
 
         <label for="email">Email Address</label>
-        <input type="email" id="Email" class="form-input" name="email-address" required>
+        <input type="email" id="email" class="form-input" name="email-address" required>
 
         <p>Type of Event</p>
 
@@ -100,9 +99,12 @@
         <label for="event-info" id="textarea-label">Please supply other revelant information to help us ie Number of
           guests, date required.</label><br>
 
-        <textarea rows="5" cols="37" name="event-info" id="event-info-box" required></textarea>
+        <textarea rows="5" cols="37" name="event-info" id="event-info" required></textarea>
+
+        
 
         <input class="btn btn-primary" type="submit" value="Submit">
+
 
       </form>
 
@@ -112,12 +114,23 @@
 
 
   </section>
+  
+
+  <br>
+
+  <div class="contact-img-text">
+    <h2>Please also see the links below to our up-to-date social media.</h2>
+
+    <h4>You can contact us there, either on Facebook or instagram!</h4>
+
+    <h3>Or email us info@cheezebo.co.uk</h3>
+
+  </div>
 
 
 
 
-
-<!------------------------------------------------------------------------------------footer logo and socials-->
+<!--////////////////////////////////////////////////////////  Footer  ////////////////-->
   <footer>
     <div class="footer-bottom">
       <div class="logo-footer-text">
@@ -127,9 +140,9 @@
 
       <ul class="social-networks">
 
-        <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-        <li><a href="https://www.pinterest.com" target="_blank"><i class="fa-brands fa-pinterest"></i></a></li>
+        <li><a href="https://www.facebook.com" aria-label="Follow me on Facebook" target="_blank"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.instagram.com" aria-label="Follow me on Instagram" target="_blank"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.pinterest.com" aria-label="Follow me on Pinterest" target="_blank"><i class="fa-brands fa-pinterest" aria-hidden="true"></i></a></li>
 
       </ul>
     </div>
