--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
   <header>
 
-<!---------------------------------------------------------------------------------Nav Bar-->
+<!--////////////////////////////////////////////////////////  Navigational Bar  ////////////////-->
 
     <nav class="navbar bg-dark fixed-top navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Cheezebo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar">
+          aria-controls="offcanvasNavbar" aria-label="Navigation Button">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -51,7 +51,7 @@
 
   </header>
 
-<!-----------------------------------------------------------------------------------hero image and text-->
+<!--////////////////////////////////////////////////////////  Hero Image and Text  ////////////////-->
   <section>
 
     <div id="hero-image">
@@ -68,7 +68,7 @@
 
 
 
-<!--------------------------------------------------------------------------------------About-Us-section-->
+<!--////////////////////////////////////////////////////////  About us   ////////////////-->
 
   <section class="about-us">
     <h1>About us</h1>
@@ -86,7 +86,7 @@
 
 
 
-  <!--------------------------------------------------------------------------------our-services-thumbnails-->
+  <!--////////////////////////////////////////////////////////  Our Services thumbnails ////////////////-->
   <section class="our-services">
 
 
@@ -111,7 +111,7 @@
 
         <a href="contactus.html" target="_blank">
           <h2>Contact Us</h2>
-          <img src="assets/images/quino-al-xhGMQ_nYWqU-unsplash.webp" class="img-thumbnail" alt="black dial phone">
+          <img src="assets/images/contact-us-telephone.webp" class="img-thumbnail" alt="black dial phone">
         </a>
       </div>
 
@@ -122,7 +122,7 @@
 
 
   <section>
-<!----------------------------------------------------------------------------------------testimonials-->
+<!--////////////////////////////////////////////////////////  Testimonials ////////////////-->
     <div class="testimonials-heading">
       <h2>Testimonials</h2>
       <p>See what our customers say about us:</p>
@@ -165,7 +165,7 @@
     </div>
 
   </section>
-  <!-----------------------------------------------------------------------------------footer-logo-and-socials-->
+  <!--////////////////////////////////////////////////////////  footer  ////////////////-->
 
   <br>
 
@@ -178,9 +178,9 @@
 
       <ul class="social-networks">
 
-        <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-        <li><a href="https://www.pinterest.com" target="_blank"><i class="fa-brands fa-pinterest"></i></a></li>
+        <li><a href="https://www.facebook.com" aria-label="Follow me on Facebook" target="_blank"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.instagram.com" aria-label="Follow me on Instagram" target="_blank"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+        <li><a href="https://www.pinterest.com" aria-label="Follow me on Pinterest" target="_blank"><i class="fa-brands fa-pinterest" aria-hidden="true"></i></a></li>
 
       </ul>
     </div>
