"add content to readme and update layout"

--- a/contactus.html
+++ b/contactus.html
@@ -34,13 +34,13 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active " aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="ourcheese.html">Our Cheeses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contactus.html">Contact Us</a>
+                <a class="nav-link active" href="contactus.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -58,15 +58,11 @@
 
     <div class="contact-image"></div>
 
-    <br>
-
     <div class="contact-img-text">
       <h2>Thank you for your interest!</h2>
 
-      <h4>Please complete the form below to help us with your enquiry.</h4>
+      <p>Please complete the form below to help us with your enquiry.</p>
     </div>
-
-
 
 
     <div class="contact-us-form">
@@ -96,8 +92,8 @@
         <br>
 
 
-        <label for="event-info" id="textarea-label">Please supply other revelant information to help us ie Number of
-          guests, date required.</label><br>
+        <label for="event-info" id="textarea-label">Please supply other revelant information to help us with your enquiry, such as number of
+          guests and date required.</label><br>
 
         <textarea rows="5" cols="37" name="event-info" id="event-info" required></textarea>
 
@@ -119,11 +115,10 @@
   <br>
 
   <div class="contact-img-text">
-    <h2>Please also see the links below to our up-to-date social media.</h2>
+    <p>Please click on our socials below to find out what we've been up to.</p>
 
-    <h4>You can contact us there, either on Facebook or instagram!</h4>
+    <p>Look us up on Facebook or Instagram.</p> <p>or email us on the link below <i class="fa-solid fa-hand-point-down"></i></p>
 
-    <h3>Or email us info@cheezebo.co.uk</h3>
 
   </div>
 
@@ -131,22 +126,25 @@
 
 
 <!--////////////////////////////////////////////////////////  Footer  ////////////////-->
-  <footer>
-    <div class="footer-bottom">
-      <div class="logo-footer-text">
-        <h2>Cheezebo</h2>
+<footer>
+  <div class="footer-bottom">
+    <div class="logo-footer-text">
+      <h2>Cheezebo</h2>
 
-      </div>
-
-      <ul class="social-networks">
-
-        <li><a href="https://www.facebook.com" aria-label="Follow me on Facebook" target="_blank"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.instagram.com" aria-label="Follow me on Instagram" target="_blank"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.pinterest.com" aria-label="Follow me on Pinterest" target="_blank"><i class="fa-brands fa-pinterest" aria-hidden="true"></i></a></li>
-
-      </ul>
     </div>
-  </footer>
+
+    <ul class="social-networks">
+
+      <li><a href="https://www.facebook.com" aria-label="Follow me on Facebook" target="_blank"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.instagram.com" aria-label="Follow me on Instagram" target="_blank"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
+      <li><a href="https://www.pinterest.com" aria-label="Follow me on Pinterest" target="_blank"><i class="fa-brands fa-pinterest" aria-hidden="true"></i></a></li>
+      
+    </ul>
+      <div class="footer-contact"><address><h4><a href="mailto:someone@example.com" aria-label="Click to open up email">info@cheezebo.co.uk</a></h4></address>
+      <address>Tel: +44(0)800 000000</address></div>
+    
+  </div>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
