--- a/contactus.html
+++ b/contactus.html
@@ -140,7 +140,7 @@
       <li><a href="https://www.pinterest.com" aria-label="Follow me on Pinterest" target="_blank"><i class="fa-brands fa-pinterest" aria-hidden="true"></i></a></li>
       
     </ul>
-      <div class="footer-contact"><address><h4><a href="mailto:someone@example.com" aria-label="Click to open up email">info@cheezebo.co.uk</a></h4></address>
+      <div class="footer-contact"><address><a href="mailto:someone@example.com" aria-label="Click to open up email">info@cheezebo.co.uk</a></address>
       <address>Tel: +44(0)800 000000</address></div>
     
   </div>
