--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
     <p>
       We here at Cheezebo are <strong><I>the</I></strong> cheese gazebo specialists.
-      No one knows their cheese and their gazebos, like we know them!<hr>
+      No one knows their cheese and their gazebos, like we know them!</p><hr><P>
       We can cater for all tastes, whether subtle and mild or honking and strong! 
       We're not only extremely knowledgable but also use our great network of
       suppliers, offering the best, tastiest cheese from all over Europe.
-      <hr>Though based in Kent we offer our catering services throughout the UK.  
+      </P><hr><p>Though based in Kent we offer our catering services throughout the UK.  
       We travel far and wide in our refridgerated cheese-mobile and 
       can often be found serving up at all weddings, birthdays and major music festivals, up and down the country!
     </p>
@@ -127,7 +127,7 @@
 
     </div>
 
-    <div class="card" class="shadow p-3 mb-5 bg-body rounded">
+    <div class="card shadow p-3 mb-5 bg-body rounded">
       <div class="row">
         <div class="col">
 
@@ -144,7 +144,7 @@
       </div>
     </div>
 
-    <div class="card" class="shadow p-3 mb-5 bg-body rounded">
+    <div class="card shadow p-3 mb-5 bg-body rounded">
       <div class="row">
         <div class="col">
 
@@ -181,7 +181,7 @@
         <li><a href="https://www.pinterest.com" aria-label="Follow me on Pinterest" target="_blank"><i class="fa-brands fa-pinterest" aria-hidden="true"></i></a></li>
         
       </ul>
-        <div class="footer-contact"><address><h4><a href="mailto:someone@example.com" aria-label="Click to open up email">info@cheezebo.co.uk</a></h4></address>
+        <div class="footer-contact"><address><a href="mailto:someone@example.com" aria-label="Click to open up email">info@cheezebo.co.uk</a></address>
         <address>Tel: +44(0)800 000000</address></div>
       
     </div>
