tidy up code across html pages and css

--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
 
   </section>
 
-
-
 <!--////////////////////////////////////////////////////////  About us   ////////////////-->
 
   <section class="about-us">
@@ -80,7 +78,7 @@
       suppliers, offering the best, tastiest cheese from all over Europe.
       </P><hr><p>Though based in Kent we offer our catering services throughout the UK.  
       We travel far and wide in our refridgerated cheese-mobile and 
-      can often be found serving up at all weddings, birthdays and major music festivals, up and down the country!
+      can often be found serving up at weddings, birthdays and many of the major music festivals, up and down the country!
     </p>
   </section>
 
@@ -112,12 +110,9 @@
           <img src="assets/images/contact-us-telephone.webp" class="img-thumbnail" alt="black dial phone">
         </a>
       </div>
-
-
     </div>
 
   </section>
-
 
   <section>
 <!--////////////////////////////////////////////////////////  Testimonials ////////////////-->
