change image files from webp to jpeg to enable compatibility for earlier safari versions

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 
         <a href="contactus.html" target="_blank">
           <h2>Weddings</h2>
-          <img src="assets/images/wedding-pergoda.webp" class="img-thumbnail" alt="wedding pergoda">
+          <img src="assets/images/weddingpergoda.jpg" class="img-thumbnail" alt="wedding pergoda">
         </a>
       </div>
       <div class="col-sm-4">
 
         <a href="ourcheese.html" target="_blank">
           <h2>Our Cheese</h2>
-          <img src="assets/images/shelvesofcheese.webp" class="img-thumbnail" alt="a shelf of cheese">
+          <img src="assets/images/shelvesofcheese.jpg" class="img-thumbnail" alt="a shelf of cheese">
         </a>
       </div>
 
@@ -107,7 +107,7 @@
 
         <a href="contactus.html" target="_blank">
           <h2>Contact Us</h2>
-          <img src="assets/images/contact-us-telephone.webp" class="img-thumbnail" alt="black dial phone">
+          <img src="assets/images/contact-us-telephone.jpg" class="img-thumbnail" alt="black dial phone">
         </a>
       </div>
     </div>
