--- a/ourcheese.html
+++ b/ourcheese.html
@@ -84,7 +84,7 @@
   <section>
     <div class="cheese-thumbnail">
       <H3>Brie</H3>
-      <p><img src="assets/images/brie-thumbnail.webp"
+      <p><img src="assets/images/brie-thumbnail.jpg"
           alt="picture of brie on a chopping board">
 
           Our brie comes from the Seine-et-Marne region of France, famous for its Brie. 
@@ -96,7 +96,7 @@
 
     <div class="cheese-thumbnail">
       <H3>Cheddar</H3>
-      <p><img src="assets/images/cheddar-image.webp" alt="picture of a round of cheddar">
+      <p><img src="assets/images/cheddar-thumbnail.jpg" alt="picture of a round of cheddar">
 
         Our cheddar is simply gorge-ous! Thats right, why go anywhere else.  Our independent small artisan cheesemaker we use have also won accolades around the globe.
         The only producer left in the village of Cheddar, Somerset makes this cheese unique.  Its crumbley, very mature and has a tasty crunch. 
@@ -106,7 +106,7 @@
 
     <div class="cheese-thumbnail">
       <H3>Stilton</H3>
-      <p><img src="assets/images/stilton-blue-cheese.webp" alt="picture of a slice of stilton">
+      <p><img src="assets/images/stilton-blue-cheese.jpg" alt="picture of a slice of stilton">
 
           Cropwell Bishop Stilton has a rich tangy favour, a velvety-soft texture that melts in your mouth.
           Hand-crafted using methods that havent changed since the 17th century.  A absolute must for any stinky blue cheese lovers!
@@ -116,7 +116,7 @@
 
     <div class="cheese-thumbnail">
       <H3>Gorgonzola</H3>
-      <p><img src="assets/images/gorganzola-thumb.webp" alt="picture of a slice of gorganzola">
+      <p><img src="assets/images/gorganzola-thumb.jpg" alt="picture of a slice of gorganzola">
 
           This beautiful <em>piccante</em> Italian blue cheese comes from the Lombardy region, where the natural caves are used traditionally in the aging of it.
           Strong, sharp and oh so very pungent and spicy aroma makes this particularly memorable. We love it here at Cheezebo, especially paired with some ripe figs.
